test: "CartService, CartRedisRepository test code"
Create CartService, CartRedisRepository test code